# Rustavoid

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.ghcr.yml  docker-compose.yml
.github/workflows/: docker-image.yml
migrations/: 20260523120000_init.sql
src/: db.rs  main.rs
static/: styles.css  styles_from_container.css
templates/: base.html  categories_manage.html  index.html  item_card.html  items_list.html
