[package]
name = "rustavoid"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework e Runtime Assíncrono
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Banco de Dados (SQLite Assíncrono)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# Templates HTML (Askama compilado estaticamente)
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Serialização e Utilitários
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
